# Geospatial-Analysis-with-Python

./: pyproject.toml
B19730_01_Asset_Files/: GISApp.py
B19730_04_Asset_Files/: B19730_04_05-ftp.py
