[tool.poetry]
name = "geospatial-analysis-with-python"
version = "0.1.0"
description = "Project to pratice with geospatial analysis book."
authors = ["WesleyJw <jwesleybiologo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
PythonTurtle = "^0.3.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
